--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -10,10 +10,12 @@
     justify-content: center;
     align-items: center;
     background-color: rgba($color: #000000, $alpha: 0.5);
+
     .closeModal{
         cursor: pointer;
     }
     .containerModal{
+        position: relative;
         background-color: #fff;
         display: flex;
         justify-content: center;
@@ -23,6 +25,25 @@
         flex-direction: column;
         padding: 1rem;
         gap: 1rem;
+    }
+    .loading{
+        left: 0;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: #000000, $alpha: 0.5);
+        display: flex;
+        justify-content: center;
+    }
+    .message{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        color: #fff;
+        height: 30px;
+        border-radius: 1rem;
+        background-color: rgb(255, 111, 111);
     }
     .headerModal{
         display: flex;
