--- a/src/variableGeneral.scss
+++ b/src/variableGeneral.scss
@@ -31,19 +31,12 @@ $stroke:#403B6D;
     display: flex;
     justify-content: center;
     align-items: center;
-    span{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 4px;
-    }
     &:hover{
-        span{
-            background: rgba($color: $purple, $alpha: 0.5);;
-        }
+      background: rgba($color: $purple, $alpha: 0.5);
     }
+}
+.active{
+  background-color: $purple;
 }
 @include small {
   .btnGeneral{
